[package]
name = "nisemono"
version = "0.1.0"
authors = ["idontknowwhatimdoing <jeyx.22@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/idontknowwhatimdoing/nisemono"
license = "MIT"

[dependencies]
smoltcp = "0.6.0"
systemstat = "0.1.5"
regex = "1.3.9"
ansi_term = "0.12.1"
